...
    <string name="app_name">InstaList</string>
    <string name="title_activity_main">InstaList</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_shopping_list_view">MainShoppingListView</string>

    <string name="nav_drawer_open">Open list overview</string>
    <string name="nav_drawer_close">Close list overview</string>
    <string name="choose_list">Choose List</string>

    <string name="menu_sort_by_product_name">Name</string>
    <string name="menu_sort_by_amount">Amount</string>
    <string name="action_search_product">Search Product</string>

...
