<!--
  ~ Copyright 2016 Tino Siegmund, Michael Wodniok
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_parent"
    tools:context=".view.activity.MainShoppingListView$PlaceholderFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_shopping_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_item_main_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_compat_margin"
        android:src="@mipmap/ic_add_white_36dp"
        app:backgroundTint="@color/secondary_color"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_anchor="@id/fragment_shopping_list"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/secondary_color_dark" />
</android.support.design.widget.CoordinatorLayout>
